--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,5 +1,5 @@
 /* Color palette */
-:root {
+/* :root {
 	--primary-color-light: 236, 49, 184;
 	--highlight-color-light: 121, 60, 104;
 	--hover-color-light: 145, 29, 113;
@@ -45,19 +45,21 @@
 		--background-color-ligher: rgb(var(--background-color-light-lighter));
 		--background-color-darker: rgb(var(--background-color-light-darker));
 	}
-}
+} */
+
+@import url('color.css');
 
 *,
 *::before,
 *::after {
 	box-sizing: border-box;
 	margin: 0;
-	font-weight: normal;
 }
 
 body {
 	min-height: 100vh;
-	color: var(--text-color);
+	color: var(--font-color);
+	font-weight: normal;
 	background: var(--background-color);
 	/* transition: color 0.5s, background-color 0.5s; */
 	line-height: 1.6;
@@ -89,5 +91,5 @@ button {
 }
 
 .text-color {
-	color: var(--text-color);
+	color: var(--font-color);
 }
