rework upload components, add image preview upload

--- a/src/assets/color.css
+++ b/src/assets/color.css
@@ -4,6 +4,7 @@
 	--dark-accent: #927c96;
 
 	--main-color: #ee1993;
+	--main-alpha: #ee199300;
 
 	--main-shade-10: #d61784;
 	--main-shade-20: #be1476;
