--- a/src/assets/color.css
+++ b/src/assets/color.css
@@ -1,11 +1,19 @@
 :root {
 	--main-color-1: #FC306D;
 	--main-color-2: #EE1993;
-	--main-gradient: linear-gradient(45deg,
+
+	--main-color: color-mix(in srgb, var(--main-color-1), var(--main-color-2));
+
+	--main-gradient: linear-gradient(to top left,
 			var(--main-color-1),
 			var(--main-color-2));
+
+	--main-gradient-hover: linear-gradient(to top left,
+			color-mix(in srgb, var(--main-color-1), black 20%),
+			color-mix(in srgb, var(--main-color-2), black 20%));
 	--error-color: #EF2E4B;
 	--accent-color: #9D9CB7;
+
 	--text-color: #F3F4F1;
 	--background-color: #181A1B;
 }
